crates/hird-codegen/tests/snapshots/emit__snapshot_reserved_words_are_quoted.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Reserved\"), \"Reserved\")"
---
%% Generated from src/reserved.hird by the Hirð compiler. Do not edit.
-module(hird_reserved).
-export(['rem'/1, hird_tools@/0]).

%% src/reserved.hird:2
'rem'(M) ->
    case M of
        'end' ->
            query;
        query ->
            'end'
    end.

hird_tools@() ->
    #{tools => #{},
        types => #{
            marker => [{'end', <<"End"/utf8>>, []},
                {query, <<"Query"/utf8>>, []}]}}.
