crates/hird-codegen/tests/snapshots/emit__snapshot_supervise_and_child_lookup.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Tree\"), \"Tree\")"
---
%% Generated from src/tree.hird by the Hirð compiler. Do not edit.
-module(hird_tree).
-export([default_config/0, boot/1, serve/1, hird_tools@/0]).

%% src/tree.hird:2
default_config() ->
    {st, 0}.

%% src/tree.hird:17
boot(_Handlers@) ->
    _U = begin
        {ok, _} = hird_planner_sup:start_link(),
        ok
    end,
    gen_server:cast(case hird_sup_util:child_pid(hird_planner_sup, planner) of
        {ok, Pid@1} -> Pid@1;
        error -> erlang:error({no_child, planner})
    end, nop).

%% src/tree.hird:20
serve(_Handlers@) ->
    _U = begin
        {ok, _} = hird_planner_sup:start_link(),
        ok
    end,
    ok = hird_stand:await(),
    ok.

hird_tools@() ->
    #{tools => #{},
        types => #{
            planner_msg => [{nop, <<"Nop"/utf8>>, []}],
            st => [{st, <<"St"/utf8>>, [int]}]}}.
