crates/hird-codegen/tests/snapshots/emit__snapshot_supervisor_empty_children.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Idle\"), \"Idle\", \"hird_idle_sup\")"
---
%% Generated from src/idle.hird by the Hirð compiler. Do not edit.
%% src/idle.hird:1
-module(hird_idle_sup).
-behaviour(supervisor).
-export([start_link/0]).
-export([init/1]).

start_link() ->
    supervisor:start_link({local, ?MODULE}, ?MODULE, []).

init([]) ->
    SupFlags = #{
        strategy => one_for_one,
        intensity => 1,
        period => 5
    },
    ChildSpecs = [],
    {ok, {SupFlags, ChildSpecs}}.
