crates/hird-codegen/tests/snapshots/emit__snapshot_supervisor_start_args_acquire_clock.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Timed\"), \"Timed\", \"hird_heart_sup\")"
---
%% Generated from src/timed.hird by the Hirð compiler. Do not edit.
%% src/timed.hird:15
-module(hird_heart_sup).
-behaviour(supervisor).
-export([start_link/0]).
-export([init/1]).

start_link() ->
    supervisor:start_link({local, ?MODULE}, ?MODULE, []).

init([]) ->
    SupFlags = #{
        strategy => one_for_one,
        intensity => 5,
        period => 60
    },
    ChildSpecs = [
        #{
            id => heart,
            start => {hird_heart, start_link, [{cfg, hird_clock:real(), 1000}]},
            restart => permanent,
            type => worker
        }
    ],
    {ok, {SupFlags, ChildSpecs}}.
