crates/hird-codegen/tests/snapshots/emit__snapshot_supervisor_start_args_share_one_variable_scope.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Nest\"), \"Nest\", \"hird_nest_sup\")"
---
%% Generated from src/nest.hird by the Hirð compiler. Do not edit.
%% src/nest.hird:14
-module(hird_nest_sup).
-behaviour(supervisor).
-export([start_link/0]).
-export([init/1]).

start_link() ->
    supervisor:start_link({local, ?MODULE}, ?MODULE, []).

init([]) ->
    SupFlags = #{
        strategy => one_for_one,
        intensity => 2,
        period => 30
    },
    ChildSpecs = [
        #{
            id => planner,
            start => {hird_planner, start_link, [begin
                Base = 1,
                {st, Base}
            end]},
            restart => permanent,
            type => worker
        },
        #{
            id => worker,
            start => {hird_worker, start_link, [begin
                Base@1 = 2,
                {st, Base@1 + 1}
            end]},
            restart => permanent,
            type => worker
        }
    ],
    {ok, {SupFlags, ChildSpecs}}.
